--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,16 +1,6 @@
-* {
-    margin: 0;
+html{
+    background-color: rgb(26, 26, 26);
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
-  }
-  
-  body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;   
-    align-items: center;   
-    min-height: 100vh;         
-    flex-direction: column;    
-    overflow: hidden;     
-    background-color: rgb(30, 30, 30);     
-  }
+}
