--- a/public/css/global.css
+++ b/public/css/global.css
@@ -4,3 +4,10 @@ html{
     margin: 0;
     box-sizing: border-box;
 }
+
+body{
+    overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
+    
+}
