--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,10 +1,12 @@
+
+
 header{
-    position: sticky;
+    position: fixed;
     top: 0;
     background-color: rgb(59, 59, 59);
     width: 100vw;
     height: 10vh;
-    z-index: 1000;
+    z-index: 100;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
