--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -6,7 +6,7 @@
     background-color: rgb(55, 55, 55);
     border-radius: 8px;
     z-index: 1;
-    top: 5vw;
+    top: 15%;
     box-shadow: 0px -1px 50px 10px rgba(255, 255, 255, 0.05);
 
 }
@@ -16,6 +16,7 @@
     align-items: center;
 }
 #title{
+    top: 7%;
     margin: 0;
     position: absolute;
     z-index: 2;
@@ -29,9 +30,24 @@
     user-select: none;
 }
 
- @media (max-width: 600px) {
-    #title{
+
+
+ .container div{
+    margin-top: 10%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
+
+ @media (max-width: 600px){
+
+     #title{
         margin: 0;
+        top: 10%;
         position: absolute;
         z-index: 2;
         color: #fff;
@@ -43,29 +59,19 @@
         text-shadow: 0 0 15px rgba(255, 255, 255, 0.2), 0 0 15px rgba(255, 255, 255, 0.3);
         user-select: none;
     }    
-    
- }
 
- .container div{
-    margin-top: 20vh;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 4;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
- }
-
- @media (max-width: 600px){
-    .container div{
-        margin-top: 10vh;
-        width: 100%;
-        height: 100%;
+    .container{
         position: absolute;
-        z-index: 4;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-     }
+        width: 90%;
+        height: auto;
+        min-height: 3000px;
+        background-color: rgb(55, 55, 55);
+        border-radius: 8px;
+        z-index: 1;
+        top: 13%;
+        box-shadow: 0px -1px 50px 10px rgba(255, 255, 255, 0.05);;
+
+
  }
+}
+    
