--- a/src/styles/components/modal.css
+++ b/src/styles/components/modal.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.704);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,13 +22,14 @@
   
   .modal-close {
     all: unset;
-    width: 1%;
-    height: 1%;
+    width: 10%;
+    height: 10%;
+    font-size: 35px;
+    text-align: center;
     position: absolute;
     right: 0;
     background: none;
     border: none;
-    font-size: 60%;
     cursor: pointer;
   }
   
